--- a/react-ecommerce/package.json
+++ b/react-ecommerce/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://manuel-lab-code.github.io/Ecommerce/",
+    "homepage": "https://manuel-lab-code.github.io/Ecommerce.git",
     "name": "react-ecommerce",
     "version": "0.1.0",
     "private": true,
