--- a/react-ecommerce/package.json
+++ b/react-ecommerce/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://manuel-lab-code.github.io/Ecommerce.git",
+    "homepage": "https://manuel-lab-code.github.io/Ecommerce/",
     "name": "react-ecommerce",
     "version": "0.1.0",
     "private": true,
@@ -19,12 +19,12 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+         "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
     },
     "eslintConfig": {
         "extends": [
