--- a/react-ecommerce/package.json
+++ b/react-ecommerce/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://manuel-lab-code.github.io/Ecommerce/",
+    "homepage": "https://manuel-lab-code.github.io/Ecommerce",
     "name": "react-ecommerce",
     "version": "0.1.0",
     "private": true,
@@ -23,7 +23,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-         "predeploy": "npm run build",
+        "predeploy": "npm run build",
         "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
